# ShuffleMoveHelper

./: .gitignore  CMakeLists.txt  README.md  config.txt  team.txt
src/: adjustBoundary.cpp  main.cpp
